# bevy_gameplay_ability_system

./: .gitignore  CLAUDE.md  Cargo.toml  GAS_AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE.md  README.md  README_CN.md  promt.md
assets/: gameplay_tags.json
benches/: gas_benchmarks.rs
docs/: abilities_design.md  ability_activation_flow.md  attributes_design.md  design_document_cn.md  effects_design.md  ge_component_integration.md  ue_gas_comparison.md
docs/plans/: 2026-02-25-ability-activation-flow-design.md  2026-02-25-bevy-gas-development-skill.md  2026-02-25-composite-skill-design.md
examples/: ability_activation.rs  ability_granting.rs  attribute_based_magnitude.rs  attribute_lifecycle.rs  basic_attributes.rs  complete_rpg.rs  comprehensive_combat.rs  comprehensive_rpg.rs  example.rs  gameplay_effects.rs  immunity_component.rs  immunity_system.rs  stress_test.rs  task_demo.rs  while_active_cues.rs
src/: error.rs  gameplay_ability_system_plugin.rs  lib.rs
tests/: ability_activation_flow.rs  ability_granting_lifecycle_test.rs  ability_task_test.rs  application_requirement_test.rs  attribute_aggregation_test.rs  attribute_based_magnitude_test.rs  curve_based_magnitude_test.rs  dynamic_magnitude_bench.rs  dynamic_magnitude_test.rs  effect_application.rs  enhanced_requirements_test.rs  entity_lifecycle_test.rs  evaluation_channel_test.rs  gameplay_effect_query_test.rs  gameplay_effect_spec_test.rs  input_task_test.rs  instancing_policy_test.rs  periodic_effect_spec_test.rs  specialized_cue_test.rs  stack_count_test.rs  stacking_reapply_spec_test.rs
(+74 files in other folders)
